--- a/RESTAssuredAutomation/pom.xml
+++ b/RESTAssuredAutomation/pom.xml
@@ -34,6 +34,14 @@
 	    <version>5.3.0</version>
 	    <scope>test</scope>
 	</dependency>
+	
+		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+	<dependency>
+	    <groupId>commons-io</groupId>
+	    <artifactId>commons-io</artifactId>
+	    <version>2.11.0</version>
+	</dependency>
+
 
   </dependencies>
   
